// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Txt /> renders with a color prop 1`] = `
<Component
  style={
    Array [
      Object {
        "color": "#fff",
        "fontSize": 18,
      },
      undefined,
    ]
  }
>
  mockText
</Component>
`;

exports[`<Txt /> renders with just text 1`] = `
<Component
  style={
    Array [
      Object {
        "color": "#000000",
        "fontSize": 18,
      },
      undefined,
    ]
  }
>
  mockText
</Component>
`;
